--- a/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
+++ b/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
@@ -9,7 +9,8 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="viewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -19,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2sk-uT-h54">
-                                <rect key="frame" x="0.0" y="64" width="260" height="392"/>
+                                <rect key="frame" x="0.0" y="20" width="260" height="436"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="433" id="0UL-TT-lyH"/>
@@ -30,17 +31,9 @@
                                     </mask>
                                 </variation>
                             </webView>
-                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yZM-zY-2X8">
-                                <rect key="frame" x="0.0" y="0.0" width="260" height="64"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="8zg-3H-nMF">
-                                    <rect key="frame" x="0.0" y="0.0" width="260" height="64"/>
-                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                </view>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="AoK-eH-VK9"/>
-                                </constraints>
-                                <blurEffect style="light"/>
-                            </visualEffectView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="CH5-mB-jhC">
+                                <rect key="frame" x="0.0" y="20" width="260" height="2"/>
+                            </progressView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HnN-Ai-rSS">
                                 <rect key="frame" x="0.0" y="456" width="260" height="44"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eFj-aN-H17">
@@ -57,16 +50,6 @@
                                     </mask>
                                 </variation>
                             </visualEffectView>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y9p-Mt-V63">
-                                <rect key="frame" x="0.0" y="0.0" width="260" height="64"/>
-                            </navigationBar>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="HOe-ig-AIt">
-                                <rect key="frame" x="0.0" y="20" width="260" height="44"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="c6h-Nt-47G"/>
-                                </constraints>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Dq-g2-0E5">
                                 <rect key="frame" x="0.0" y="456" width="260" height="44"/>
                                 <constraints>
@@ -85,19 +68,13 @@
                                             <action selector="forwardButtonTapped:" destination="BYZ-38-t0r" id="YAf-NW-fRH"/>
                                         </connections>
                                     </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="gPL-y2-5Gs"/>
+                                    <barButtonItem image="Search-Music3" id="nuk-cc-9nH">
+                                        <connections>
+                                            <action selector="refresh:" destination="BYZ-38-t0r" id="qsz-6I-fWq"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="30Q-y7-EZG"/>
-                                    <barButtonItem image="Search" id="0R1-ru-dXC">
-                                        <connections>
-                                            <action selector="manualSearch:" destination="BYZ-38-t0r" id="xlN-VK-jnB"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="cLo-xb-xK4"/>
-                                    <barButtonItem image="Search-Music3" id="F7o-ah-QzT">
-                                        <connections>
-                                            <action selector="refresh:" destination="BYZ-38-t0r" id="ZP5-Ba-a7h"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="WTo-Sz-BLJ"/>
                                     <barButtonItem image="Safari" id="h9h-Pj-nLk">
                                         <connections>
                                             <action selector="actionButtonPressed:" destination="BYZ-38-t0r" id="V1i-My-9NE"/>
@@ -110,54 +87,51 @@
                                     </mask>
                                 </variation>
                             </toolbar>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="CH5-mB-jhC">
-                                <rect key="frame" x="0.0" y="62" width="260" height="2"/>
-                            </progressView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Dq-Rc-CDJ">
+                                <rect key="frame" x="0.0" y="0.0" width="260" height="20"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="etw-Ur-BlH">
+                                    <rect key="frame" x="0.0" y="0.0" width="260" height="20"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="1eO-hk-Str"/>
+                                </constraints>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="y9p-Mt-V63" firstAttribute="bottom" secondItem="HOe-ig-AIt" secondAttribute="bottom" id="48S-Za-ZtJ"/>
-                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="7AQ-2m-JAE"/>
-                            <constraint firstItem="y9p-Mt-V63" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="97w-ZW-tii"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="3Dq-Rc-CDJ" secondAttribute="bottom" id="2cz-Kg-xEB"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="20" id="2zm-jB-RJa"/>
+                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="6Eu-kT-Qjn"/>
                             <constraint firstItem="HnN-Ai-rSS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9QX-Qx-xCQ"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="y9p-Mt-V63" secondAttribute="top" id="AhB-qb-4io"/>
-                            <constraint firstItem="HOe-ig-AIt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="B5L-L6-eji"/>
-                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="CS5-jN-7M2"/>
-                            <constraint firstItem="y9p-Mt-V63" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="CXi-yB-8Jm"/>
                             <constraint firstItem="HnN-Ai-rSS" firstAttribute="width" secondItem="0Dq-g2-0E5" secondAttribute="width" id="FUn-Gp-drZ"/>
-                            <constraint firstItem="yZM-zY-2X8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="I81-Ha-Ugu"/>
-                            <constraint firstItem="yZM-zY-2X8" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Jqj-Z0-I8T"/>
+                            <constraint firstItem="2sk-uT-h54" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="IMY-BB-ptY"/>
+                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="CH5-mB-jhC" secondAttribute="bottom" id="KGl-Qz-XnR"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Dq-g2-0E5" secondAttribute="bottom" id="NF8-3I-bSI"/>
+                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="O9z-wG-5ar"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Oz9-mH-RAS"/>
+                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="3Dq-Rc-CDJ" secondAttribute="bottom" id="RHZ-Tm-wk0"/>
                             <constraint firstItem="0Dq-g2-0E5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RT5-4I-Got"/>
-                            <constraint firstItem="HnN-Ai-rSS" firstAttribute="height" secondItem="0Dq-g2-0E5" secondAttribute="height" id="S6a-xh-F6T"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="TXl-XX-s8o"/>
-                            <constraint firstItem="yZM-zY-2X8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Tga-vV-Mzg"/>
-                            <constraint firstItem="y9p-Mt-V63" firstAttribute="height" secondItem="HOe-ig-AIt" secondAttribute="height" id="YEQ-Dg-PpH"/>
-                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="YT4-Gr-5Ek"/>
                             <constraint firstItem="HnN-Ai-rSS" firstAttribute="height" secondItem="0Dq-g2-0E5" secondAttribute="height" id="cKD-Pd-d4y"/>
-                            <constraint firstItem="y9p-Mt-V63" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ef5-Ew-YSq"/>
-                            <constraint firstItem="HOe-ig-AIt" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hAM-jX-HRL"/>
-                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="hMT-Gy-9s4"/>
-                            <constraint firstItem="HOe-ig-AIt" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="i6p-7d-uIs"/>
+                            <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eSb-sF-Ruk"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eht-PD-USD"/>
+                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="gSJ-ZF-c6Y"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="iBb-mm-hJx"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ivn-3V-vnj"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HnN-Ai-rSS" secondAttribute="bottom" id="jQE-HI-0PG"/>
                             <constraint firstItem="0Dq-g2-0E5" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="kFB-GP-nd7"/>
-                            <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="y9p-Mt-V63" secondAttribute="bottom" id="lhp-AX-ZdI"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="yZM-zY-2X8" secondAttribute="bottom" id="mkD-AJ-afp"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="nOI-Hh-PR8"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Dq-g2-0E5" secondAttribute="bottom" id="puA-ZL-9LS"/>
-                            <constraint firstItem="y9p-Mt-V63" firstAttribute="top" secondItem="HOe-ig-AIt" secondAttribute="top" id="qnE-R7-teY"/>
-                            <constraint firstItem="2sk-uT-h54" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="spi-io-d2S"/>
+                            <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="uXk-eS-Fia"/>
+                            <constraint firstItem="2sk-uT-h54" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vFD-Zz-WAK"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="YEQ-Dg-PpH"/>
-                                <exclude reference="qnE-R7-teY"/>
-                                <exclude reference="AhB-qb-4io"/>
-                                <exclude reference="TXl-XX-s8o"/>
-                                <exclude reference="7AQ-2m-JAE"/>
-                                <exclude reference="S6a-xh-F6T"/>
+                                <exclude reference="KGl-Qz-XnR"/>
+                                <exclude reference="O9z-wG-5ar"/>
+                                <exclude reference="2cz-Kg-xEB"/>
+                                <exclude reference="2zm-jB-RJa"/>
+                                <exclude reference="nOI-Hh-PR8"/>
                             </mask>
                         </variation>
                     </view>
@@ -167,21 +141,18 @@
                         <outlet property="backButton" destination="df1-g7-7pW" id="6dF-kb-hIN"/>
                         <outlet property="forwardButton" destination="vdW-gT-6dL" id="1KP-nY-fFV"/>
                         <outlet property="progressView" destination="CH5-mB-jhC" id="eAC-5V-xux"/>
-                        <outlet property="searchBar" destination="HOe-ig-AIt" id="vS4-IZ-FrC"/>
                         <outlet property="toolbar" destination="0Dq-g2-0E5" id="dcT-PS-y18"/>
                         <outlet property="webView" destination="2sk-uT-h54" id="A5b-OD-K3R"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="326" y="393"/>
+            <point key="canvasLocation" x="398" y="436"/>
         </scene>
     </scenes>
     <resources>
         <image name="Back" width="21" height="21"/>
         <image name="Forward" width="21" height="21"/>
         <image name="Safari" width="21" height="21"/>
-        <image name="Search" width="21" height="21"/>
-        <image name="Search-Music3" width="64" height="64"/>
+        <image name="Search-Music3" width="21" height="21"/>
     </resources>
 </document>
