--- a/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
+++ b/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
@@ -31,9 +31,6 @@
                                     </mask>
                                 </variation>
                             </webView>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="CH5-mB-jhC">
-                                <rect key="frame" x="0.0" y="20" width="260" height="2"/>
-                            </progressView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HnN-Ai-rSS">
                                 <rect key="frame" x="0.0" y="456" width="260" height="44"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eFj-aN-H17">
@@ -50,6 +47,9 @@
                                     </mask>
                                 </variation>
                             </visualEffectView>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="CH5-mB-jhC">
+                                <rect key="frame" x="0.0" y="20" width="260" height="2"/>
+                            </progressView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Dq-g2-0E5">
                                 <rect key="frame" x="0.0" y="456" width="260" height="44"/>
                                 <constraints>
@@ -74,7 +74,7 @@
                                             <action selector="refresh:" destination="BYZ-38-t0r" id="qsz-6I-fWq"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="30Q-y7-EZG"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="pxH-NQ-Ord"/>
                                     <barButtonItem image="Safari" id="h9h-Pj-nLk">
                                         <connections>
                                             <action selector="actionButtonPressed:" destination="BYZ-38-t0r" id="V1i-My-9NE"/>
@@ -113,6 +113,7 @@
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Oz9-mH-RAS"/>
                             <constraint firstItem="2sk-uT-h54" firstAttribute="top" secondItem="3Dq-Rc-CDJ" secondAttribute="bottom" id="RHZ-Tm-wk0"/>
                             <constraint firstItem="0Dq-g2-0E5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RT5-4I-Got"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="top" id="Sbc-j2-Q5V"/>
                             <constraint firstItem="HnN-Ai-rSS" firstAttribute="height" secondItem="0Dq-g2-0E5" secondAttribute="height" id="cKD-Pd-d4y"/>
                             <constraint firstItem="3Dq-Rc-CDJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eSb-sF-Ruk"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="eht-PD-USD"/>
@@ -120,10 +121,12 @@
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="iBb-mm-hJx"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="HnN-Ai-rSS" secondAttribute="bottom" id="jQE-HI-0PG"/>
                             <constraint firstItem="0Dq-g2-0E5" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="kFB-GP-nd7"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="top" id="mxG-p0-gcb"/>
                             <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="nOI-Hh-PR8"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="0Dq-g2-0E5" secondAttribute="bottom" id="puA-ZL-9LS"/>
                             <constraint firstItem="0Dq-g2-0E5" firstAttribute="top" secondItem="2sk-uT-h54" secondAttribute="bottom" id="uXk-eS-Fia"/>
                             <constraint firstItem="2sk-uT-h54" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vFD-Zz-WAK"/>
+                            <constraint firstItem="CH5-mB-jhC" firstAttribute="bottom" secondItem="2sk-uT-h54" secondAttribute="bottom" id="ytj-Rr-Sz3"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -131,7 +134,10 @@
                                 <exclude reference="O9z-wG-5ar"/>
                                 <exclude reference="2cz-Kg-xEB"/>
                                 <exclude reference="2zm-jB-RJa"/>
+                                <exclude reference="Sbc-j2-Q5V"/>
+                                <exclude reference="eht-PD-USD"/>
                                 <exclude reference="nOI-Hh-PR8"/>
+                                <exclude reference="ytj-Rr-Sz3"/>
                             </mask>
                         </variation>
                     </view>
