--- a/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
+++ b/Instant Lyrics/Instant Lyrics/Base.lproj/Main.storyboard
@@ -9,7 +9,6 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="viewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
@@ -68,7 +67,7 @@
                                             <action selector="forwardButtonTapped:" destination="BYZ-38-t0r" id="YAf-NW-fRH"/>
                                         </connections>
                                     </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="gPL-y2-5Gs"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="hLU-mw-t9w"/>
                                     <barButtonItem image="Safari" id="h9h-Pj-nLk">
                                         <connections>
                                             <action selector="actionButtonPressed:" destination="BYZ-38-t0r" id="V1i-My-9NE"/>
@@ -145,6 +144,7 @@
                         <outlet property="webView" destination="2sk-uT-h54" id="A5b-OD-K3R"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="398" y="436"/>
         </scene>
