--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -14,6 +14,18 @@ a {
   text-decoration: none; }
   a:hover {
     text-decoration: underline; }
+figure
+{
+    width:33%;
+    float:left;
+    margin:0px;
+    text-align:center;
+    padding:10px;
+}
+figure>img
+{
+    box-shadow: 0px 0px 20px #888888;
+}
 
 .btn {
   display: inline-block;
@@ -221,6 +233,7 @@ a {
     font-size: 1rem; } }
 
 .site-footer {
+  clear: left;
   padding-top: 2rem;
   margin-top: 2rem;
   border-top: solid 1px #eff0f1; }
